--- a/index.html
+++ b/index.html
@@ -4,35 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./assets/images/Icono_1.png">
     <title>Nelly's Bakery</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+    <header class="position-sticky">
+      <div class="icono bg-light">
+        <a href="#"><img src="./assets/images/Icono_1.png" width="100rem" height="100rem" alt="Icono"></a>
+      </div> 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+          <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <ul class="navbar-nav col justify-content-evenly mb-2 mb-lg-0">
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="#">Inicio</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="./pages/nosotros.html">Sobre Nosotros</a>
+                  </li>
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" aria-current="page" href="./pages/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="./pages/carrito.html">Pedido</a>
                   </li>
               </div>
-            </div>
-          </nav>
+          </div>
+        </nav>
     </header>
     <main>
-        <p>asasasdasdasdasdasd</p>
+
     </main>
     <footer>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
