--- a/pages/pages/producto.html
+++ b/pages/pages/producto.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./../css/styles.css">
-    <link rel="icon" href="./../assets/images/Icono_1.png">
+    <link rel="icon" href="./../../assets/images/Icono_1.png">
     <script src="https://kit.fontawesome.com/2c95d10380.js" crossorigin="anonymous"></script>
-    <title>Pedido</title>
+    <title>Prueba</title>
 </head>
 <body>
     <header>
@@ -28,19 +28,19 @@
                         <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a>
                       </li>
                       <li class="nav-item active navegacion">
-                        <a class="nav-link" href="./productos.html">Productos</a>
+                        <a class="nav-link" href="#">Productos</a>
                       </li>
                       <li class="nav-item active navegacion">
-                        <a class="nav-link" href="#">Pedido</a>
+                        <a class="nav-link" href="./carrito.html">Pedido</a>
                       </li>
                   </div>
               </div>
             </nav>
     </header>
     <main>
-        
+
     </main>
-      <footer class="pieDePagina">
+    <footer class="pieDePagina">
         <ul class="nav justify-content-center">
           <li class="nav-item iconos">
             <a class="nav-link" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
