--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,21 +2,62 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" href="./assets/images/Icono_1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./../css/styles.css">
+    <link rel="icon" href="./../assets/images/Icono_1.png">
+    <script src="https://kit.fontawesome.com/2c95d10380.js" crossorigin="anonymous"></script>
     <title>Productos</title>
 </head>
 <body>
     <header>
-
+        <div class="icono bg-light">
+            <a href="#"><img src="./../assets/images/Icono_1.png" width="100rem" height="100rem" alt="Icono"></a>
+          </div> 
+            <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky"> 
+              <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav col justify-content-evenly mb-2 mb-lg-0">
+                      <li class="nav-item active navegacion">
+                        <a class="nav-link" href="./../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item active navegacion">
+                        <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a>
+                      </li>
+                      <li class="nav-item active navegacion">
+                        <a class="nav-link" href="#">Productos</a>
+                      </li>
+                      <li class="nav-item active navegacion">
+                        <a class="nav-link" href="./carrito.html">Pedido</a>
+                      </li>
+                  </div>
+              </div>
+            </nav>
     </header>
     <main>
+      <img src="./../assets/images/imgPrincpalProductos.jpeg" alt="" width="100%" height="600rem">  
+      <h1 class="titulo_3">Productos</h1>
+      <p class="textoProducto">Hecho a medida para ser tan dulce como tú</p>
+      <h2 class="subtitulo">Tortas</h2>
 
     </main>
-    <footer>
-
+    <footer class="pieDePagina">
+      <ul class="nav justify-content-center">
+        <li class="nav-item iconos">
+          <a class="nav-link" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li class="nav-item iconos">
+          <a class="nav-link" href="https://www.instagram.com/nellysbakery_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li class="nav-item iconos">
+          <a class="nav-link" href="https://wa.link/9phdaz" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
