--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,6 +56,7 @@
       </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
+    <script src="./../js/index.js"></script>
+    <script src="./../js/stock.js"></script>
 </body>
 </html>
