--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Nelly's Bakery</title>
 </head>
 <body>
-    <header class="cabecera">
-      <div class="icono bg-light">
+  <header>
+    <div class="icono bg-light">
         <a href="#"><img src="./assets/images/Icono_1.png" width="100rem" height="100rem" alt="Icono"></a>
       </div> 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light cabecera"> 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky"> 
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,15 @@
                   <li class="nav-item active navegacion">
                     <a class="nav-link" href="./pages/productos.html">Productos</a>
                   </li>
-                  <li class="nav-item active navegacion">
-                    <a class="nav-link" href="./pages/carrito.html">Pedido</a>
-                  </li>
+                  <ul style="list-style: none;"className="navbar-nav me-auto">  
+                    <li className="nav-item " >
+                        <a id="botonCarrito" data-bs-toggle="modal" data-bs-target="#idModalCarrito" class="btn btn-secondary"><i class="fas fa-shopping-cart fa-1x"></i></a>
+                    </li>
+                </ul>
               </div>
           </div>
         </nav>
-    </header>
+</header>
     <main>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner fondo">
@@ -44,10 +46,10 @@
             <img src="./assets/images/Torta_1.jpg" class="d-block mx-auto img-fluid" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/alfajores.jpg" class="d-block mx-auto img-fluid" alt="...">
+            <img src="./assets/images/img4.jpg" class="d-block mx-auto img-fluid" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/tortalimon.jpg" class="d-block mx-auto img-fluid" alt="...">
+            <img src="./assets/images/img5.jpg" class="d-block mx-auto img-fluid" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -88,6 +90,25 @@
             </div>
         </div>
       </div>
+      
+      <div class="modal fade" id="idModalCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Carrito de Compras</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="modal-bodyCarrito"></div>
+            <div class="row ml-ato">
+              <p id="precioTotal"></p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="pieDePagina">
       <ul class="nav justify-content-center">
@@ -103,7 +124,7 @@
       </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/stock.js"></script>
     <script src="./js/index.js"></script>
-    <script src="./../js/stock.js"></script>
 </body>
 </html>
