--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,33 +10,35 @@
     <title>Sobre Nosotros</title>
 </head>
 <body>
-    <header>
-        <div class="icono bg-light">
-            <a href="#"><img src="./../assets/images/Icono_1.png" width="100rem" height="100rem" alt="Icono"></a>
-          </div> 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky"> 
-              <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav col justify-content-evenly mb-2 mb-lg-0">
-                      <li class="nav-item active navegacion">
-                        <a class="nav-link" href="./../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item active navegacion">
-                        <a class="nav-link" href="#">Sobre Nosotros</a>
-                      </li>
-                      <li class="nav-item active navegacion">
-                        <a class="nav-link" href="./productos.html">Productos</a>
-                      </li>
-                      <li class="nav-item active navegacion">
-                        <a class="nav-link" href="./carrito.html">Pedido</a>
-                      </li>
-                  </div>
+  <header>
+    <div class="icono bg-light">
+        <a href="#"><img src="./../assets/images/Icono_1.png" width="100rem" height="100rem" alt="Icono"></a>
+      </div> 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky"> 
+          <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav col justify-content-evenly mb-2 mb-lg-0">
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="./../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a>
+                  </li>
+                  <li class="nav-item active navegacion">
+                    <a class="nav-link" href="#">Productos</a>
+                  </li>
+                  <ul style="list-style: none;"className="navbar-nav me-auto">  
+                    <li className="nav-item " >
+                        <a id="botonCarrito" data-bs-toggle="modal" data-bs-target="#idModalCarrito" class="btn btn-secondary"><i class="fas fa-shopping-cart fa-1x"></i></a>
+                    </li>
+                </ul>
               </div>
-            </nav>
-    </header>
+          </div>
+        </nav>
+</header>
     <main>
       <h1 class="titulo_2">Sobre Nelly's Bakery</h1>
       <p>Somos un emprendimiento artesanal que se especializa en delicatessen, tartas exquisitas, tortas personalizadas y diversas delicias. <br>
@@ -56,7 +58,7 @@
       </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./../js/index.js"></script>
     <script src="./../js/stock.js"></script>
+    <script src="./../js/index.js"></script>
 </body>
 </html>
