--- a/pages/productos.html
+++ b/pages/productos.html
@@ -50,7 +50,7 @@
           <button class="btn btn-outline-success" type="submit">Buscar</button>
       </form>
       <section id="productos" class="contenedorProductos">
-        <button id="btnCatalogo">Mira nuestro catalogo haciendo click aqui!</button>
+       <div id="coincidencia"></div>
       </section>  
       
       
@@ -89,7 +89,7 @@
       </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./../js/index.js"></script>
     <script src="./../js/stock.js"></script>
+    <script src="./../js/index.js"></script>
 </body>
 </html>
