--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="cards">
         <div class="card cartas">
           <a href="./pages/nosotros.html">
-            <img src="..." class="card-img-top" alt="...">
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
               <p class="card-text">Nosotros somos un emprendimiento  con el que...</p>
             </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="card cartas">
           <a href="./pages/productos.html">
-            <img src="..." class="card-img-top" alt="...">
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
               <p class="card-text">Aqui podras ver el catalogo de todos nuestros productos</p>
             </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="card cartas">
           <a href="./pages/carrito.html">
-            <img src="..." class="card-img-top" alt="...">
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
               <p class="card-text">Aqui podras ver tu pedido y pagarlo</p>
           </a>
@@ -124,7 +124,7 @@
       </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./js/stock.js"></script>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/stock.js"></script>
+    <script src="./js/index.js"></script> -->
 </body>
 </html>
