--- a/pages/productos.html
+++ b/pages/productos.html
@@ -43,7 +43,7 @@
     <main>
       <img src="./../assets/images/imgPrincpalProductos.jpeg" alt="" width="100%" height="600rem">  
       <h1 class="titulo_3">Productos</h1>
-      <p class="textoProducto">Hecho a medida para ser tan dulce como vos</p>
+      <p class="textoProducto">Hechos a medida para ser tan dulce como vos</p>
        <br>
        <br> 
       <form class="d-flex busqueda" >
@@ -73,8 +73,7 @@
             <div class="row ml-ato">
               <p id="precioTotal"></p>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <div id = "botonera" class="modal-footer">
               <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
             </div>
           </div>
